# workshoptool

./: .gitmodules  CMakeLists.txt  HttpClient.h  LICENSE.md  README.md  main.cpp  vcpkg.json  version.h.in
.github/workflows/: build.yml  ubuntu.yml  windows.yml
src/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  Log.h  SteamWorkshop.cpp  SteamWorkshop.h  main.cpp  version.h.in
